sonar: pass 30min Added Debt 2 New Code Smells Maintainability A 89.2% Coverage on 27 New Lines to cover 0.0% Duplications on 655 New Lines